<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/options_app"
        android:icon="@drawable/more_vert"
        android:title="@string/options_app"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/history"
                android:numericModifiers="CTRL"
                android:numericShortcut="H"
                android:title="@string/history" />
            <item
                android:id="@+id/theme"
                android:numericModifiers="CTRL"
                android:numericShortcut="T"
                android:title="@string/theme" />
        </menu>
    </item>
</menu>