<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_theme"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel"
                style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/done"
                android:gravity="center"
                android:textSize="0sp"
                android:tooltipText="@string/done"
                app:icon="@drawable/done" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/systemRadioButton">

            <RadioButton
                android:id="@+id/systemRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/as_a_system"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/lightRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/light_mode"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/darkRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/dark_theme"
                android:textSize="19sp" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>