<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/inputGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            app:title="@string/no_text">

            <androidx.cardview.widget.CardView
                android:id="@+id/switchTab"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/tab_s_background"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="#00FFFFFF"
                    app:tabGravity="center"
                    app:tabIndicator="@drawable/dialog_background"
                    app:tabIndicatorColor="?attr/colorBackgroundFloating"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorGravity="stretch"
                    app:tabMaxWidth="0dp"
                    app:tabMinWidth="0dp"
                    app:tabMode="auto"
                    app:tabPaddingEnd="10dp"
                    app:tabPaddingStart="10dp"
                    app:tabRippleColor="#00FFFFFF"
                    app:tabSelectedTextColor="?attr/colorPrimary"
                    app:tabTextAppearance="@style/TabLayoutTextStyle">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/numericTab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/numeric" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/scientificTab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scientific" />

                </com.google.android.material.tabs.TabLayout>
            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:orientation="vertical"
            android:paddingHorizontal="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|end"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="bottom|end"
                    android:inputType="none"
                    android:layoutDirection="ltr"
                    android:paddingHorizontal="10dp"
                    android:textSize="60sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>